[package]
name = "borsa-binance"
version = "0.3.0"
edition = "2024"
license = "MIT"
authors = ["Giovanni Ramistella <contact@borsa.rs>"]
description = "Binance API connector for the borsa ecosystem."
readme = "README.md"
repository = "https://github.com/borsaorg/borsa-binance"
homepage = "https://github.com/borsaorg/borsa-binance"
documentation = "https://docs.rs/borsa-binance"
keywords = ["finance", "binance", "crypto", "market-data"]
categories = ["api-bindings", "finance", "web-programming::http-client"]

[features]
default = []
test-adapters = []
tracing = []

[dependencies]
borsa-core = { git = "https://github.com/borsaorg/borsa", rev = "4401d9b22ca439bba7760c0d7e20bc4e8b634182" }
borsa-middleware = { git = "https://github.com/borsaorg/borsa", rev = "4401d9b22ca439bba7760c0d7e20bc4e8b634182" }
async-trait = "0.1.89"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"
# binance = { git = "https://github.com/butterfly-trading/binance-rs-fork", rev = "c3204e17115d47ca85445123c6b1d02561f61586" }
binance = { path = "/Users/john/Projects/binance-rs-fork" }
serde_json = "1.0.145"
futures-util = "0.3.30"
rust_decimal = "1.39.0"
tokio-tungstenite = "0.28.0"

[dev-dependencies]
