[package]
name = "borsa-binance"
version = "0.3.0"
edition = "2024"
license = "MIT"
authors = ["Giovanni Ramistella <contact@borsa.rs>"]
description = "Binance API connector for the borsa ecosystem."
readme = "README.md"
repository = "https://github.com/borsaorg/borsa-binance"
homepage = "https://github.com/borsaorg/borsa-binance"
documentation = "https://docs.rs/borsa-binance"
keywords = ["finance", "binance", "crypto", "market-data"]
categories = ["api-bindings", "finance", "web-programming::http-client"]

[features]
default = []
test-adapters = []
tracing = []

[dependencies]
borsa-core = { git = "https://github.com/borsaorg/borsa", rev = "c5c321fd8a531f4a817e30087db3b68a5fb68cf1" }
# borsa-core = { path = "/Users/john/Projects/Public/borsa-workspace/borsa-core" }
borsa-middleware = { git = "https://github.com/borsaorg/borsa", rev = "c5c321fd8a531f4a817e30087db3b68a5fb68cf1" }
# borsa-middleware = { path = "/Users/john/Projects/Public/borsa-workspace/borsa-middleware" }
async-trait = "0.1.89"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"
binance = { git = "https://github.com/butterfly-trading/binance-rs-fork", rev = "5c12c045ee5018611326d163c08d14cc561d39e2" }
# binance = { path = "/Users/john/Projects/binance-rs-fork" }
serde_json = "1.0.145"
rust_decimal = "1.39.0"

[dev-dependencies]
