[package]
name = "borsa-binance"
version = "0.3.0"
edition = "2024"
license = "MIT"
authors = ["Giovanni Ramistella <contact@borsa.rs>"]
description = "Binance API connector for the borsa ecosystem."
readme = "README.md"
repository = "https://github.com/borsaorg/borsa-binance"
homepage = "https://github.com/borsaorg/borsa-binance"
documentation = "https://docs.rs/borsa-binance"
keywords = ["finance", "binance", "crypto", "market-data"]
categories = ["api-bindings", "finance", "web-programming::http-client"]

[features]
default = []
test-adapters = []
tracing = []

[dependencies]
borsa-core = { git = "https://github.com/borsaorg/borsa", rev = "d668dd4d63669d48c15bb1be98ae709e03deb5cc" }
# borsa-core = { path = "/Users/john/Projects/Public/borsa-workspace/borsa-core" }
borsa-middleware = { git = "https://github.com/borsaorg/borsa", rev = "d668dd4d63669d48c15bb1be98ae709e03deb5cc" }
# borsa-middleware = { path = "/Users/john/Projects/Public/borsa-workspace/borsa-middleware" }
async-trait = "0.1.89"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"
binance = { git = "https://github.com/butterfly-trading-company/binance-rs-fork", rev = "521a4b5eac4b72611c248b8a7c63d7d508a5fb67" }
# binance = { path = "/Users/john/Projects/binance-rs-fork" }
serde_json = "1.0.145"
rust_decimal = "1.39.0"

[dev-dependencies]
